[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = "0.12.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
sys-info = "0.9"
chrono = { version = "0.4", default-features = false, features = ["clock"] }


